# road-anomaly-detection

./: .gitignore  README.md  pyproject.toml
.cursor/rules/: code-rules.mdc  project-methods.mdc
notebooks/: dataset_exploration.ipynb
src/: pipeline.py  web_app.py
src/data/: loader.py
src/features/: processor.py
src/models/: anomaly_detector.py
tests/: test_anomaly_detector.py
