[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "road-anomaly-detection"
version = "0.1.0"
description = "Road anomaly detection using SVM"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "h5py>=3.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
ignore = []
